# Sqlite-DB

./: pyproject.toml  readme.md
