# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlite-orm"
version = "1.0.0"
description = "Django style ORM for sqlite3"
readme = "readme.md"
authors = [{ name = "Thraize", email = "gamerxville@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["database", "sqlite", "orm"]
dependencies = [
    "bottle",
    'tomli; python_version < "3.12"',
]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/7HR4IZ3/Sqlite-DB"
